<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserProfileActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/app_gradient_color_background"
        android:id="@+id/toolbar_user_profile_activity">

        <TextView android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:id="@+id/tv_title"
            android:textStyle="bold"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textColor="@color/white"
            android:text="@string/title_complete_profile"
            android:paddingEnd="0dp"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:gravity="center"
            android:paddingRight="0dp"
            android:paddingLeft="@dimen/toolbar_title_paddingStart" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_user_profile_activity"
        app:layout_constraintBottom_toBottomOf="parent"
        android:scrollbars="none"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">


            <FrameLayout
                android:layout_height="@dimen/profile_user_image_size"
                android:layout_width="@dimen/profile_user_image_size"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/fl_user_image"
                android:layout_marginTop="@dimen/profile_user_image_marginTop">

                <ImageView
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="@color/gray"
                    android:id="@+id/iv_user_photo"
                    android:src="@drawable/ic_user_placeholder"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/content_description"
                    android:layout_margin="@dimen/profile_user_photo_margin"/>

                <View android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:background="@drawable/user_image_background"/>

            </FrameLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_first_name"
                app:layout_constraintTop_toBottomOf="@id/fl_user_image"
                android:layout_marginTop="35dp"
                android:textColorHint="@color/colorSecondaryText"
                android:hint="@string/hint_first_name"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.example.shoppable.Utills.SPEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_first_name"
                    android:textSize="@dimen/et_textSize"
                    android:textColor="@color/colorPrimaryText"
                    android:padding="@dimen/et_padding"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_last_name"
                app:layout_constraintTop_toBottomOf="@id/til_first_name"
                android:layout_marginTop="25dp"
                android:textColorHint="@color/colorSecondaryText"
                android:hint="@string/hint_last_name"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.example.shoppable.Utills.SPEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_last_name"
                    android:textSize="@dimen/et_textSize"
                    android:textColor="@color/colorPrimaryText"
                    android:padding="@dimen/et_padding"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout android:layout_height="wrap_content" android:layout_width="match_parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/til_email" app:layout_constraintTop_toBottomOf="@id/til_last_name" android:layout_marginTop="25dp" android:textColorHint="@color/colorSecondaryText" android:hint="@string/et_hint_email_id" android:layout_marginEnd="16dp" android:layout_marginStart="16dp" style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.example.shoppable.Utills.SPEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_email"
                    android:textSize="@dimen/et_textSize"
                    android:textColor="@color/colorPrimaryText"
                    android:padding="@dimen/et_padding"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>


          TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/til_mobile_number"
                app:layout_constraintTop_toBottomOf="@id/til_email"
                android:layout_marginTop="25dp"
                android:textColorHint="@color/colorSecondaryText"
                android:hint="@string/et_hint_mobile_number"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.example.shoppable.Utills.SPEditText
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:id="@+id/et_mobile_number"
                    android:textSize="@dimen/et_textSize"
                    android:textColor="@color/colorPrimaryText"
                    android:padding="@dimen/et_padding"
                    android:inputType="phone"/>

            </com.google.android.material.textfield.TextInputLayout>
            <RadioGroup
                android:layout_height="@dimen/profile_radio_button_height"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/rg_gender"
                app:layout_constraintTop_toBottomOf="@id/til_mobile_number"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"

                android:orientation="horizontal">

                <com.example.shoppable.Utills.SPRadioButton
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:background="@drawable/drwable_gender_ta_selector"
                    android:id="@+id/rb_male"
                    android:textStyle="bold"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:text="@string/rb_lbl_male"
                    android:gravity="center"
                    android:layout_marginEnd="@dimen/profile_radio_button_marginStartEnd"
                    android:checked="true"
                    android:button="@null"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/profile_radio_button_marginStartEnd" />

                <com.example.shoppable.Utills.SPRadioButton
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:background="@drawable/drwable_gender_ta_selector"
                    android:id="@+id/rb_female"
                    android:textStyle="bold"
                    android:textColor="@drawable/drawable_gender_tab_text_color_selector"
                    android:text="@string/rb_lbl_female"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
                    android:button="@null"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/profile_radio_button_marginStartEnd" />

            </RadioGroup>

            <com.example.shoppable.Utills.SPButton
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/button_background"
                android:id="@+id/btn_save"
                android:textSize="@dimen/btn_textSize"
                android:textColor="@android:color/white"
                android:text="@string/btn_lbl_save"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/rg_gender"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:paddingBottom="@dimen/btn_padding"
                android:paddingTop="@dimen/btn_padding"
                android:foreground="?attr/selectableItemBackground"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>